--- a/ET_Flask.service
+++ b/ET_Flask.service
@@ -5,9 +5,9 @@ After=network.target
 [Service]
 User=ubuntu
 Group=www-data
-WorkingDirectory=/home/ubuntu/ET_Flask
-Environment="PATH=/home/ubuntu/ET_Flask/ET_ENV/bin"
-ExecStart=/home/ubuntu/ET_Flask/ET_ENV/bin/gunicorn --workers 3 --log-file ET_error.log --access-logfile ET_access.log --timeout 300 --graceful-timeout 300 --bind unix:ET_Flask.sock -m 007 ET_Flask.wsgi:app
+WorkingDirectory=${DIR}
+Environment="PATH=${DIR}/ET_ENV/bin"
+ExecStart=${DIR}/ET_ENV/bin/gunicorn --workers 3 --log-file ET_error.log --access-logfile ET_access.log --timeout 300 --graceful-timeout 300 --bind unix:ET_Flask.sock -m 007 ET_Flask.wsgi:app
 
 [Install]
 WantedBy=multi-user.target
